--- a/app/Components/Pages/Settings.razor.css
+++ b/app/Components/Pages/Settings.razor.css
@@ -6,6 +6,7 @@
     padding: 0.5rem;
     background-color: var(--dark-bg);
     overflow: hidden;
+    position: relative;
 }
 
 .settings-tabs {
@@ -16,13 +17,15 @@
     background-color: var(--dark-bg);
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 1000;
     margin-bottom: 5px;
+    width: 100%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .settings-tab-container, .settings-tab-container-active {
     width: 250px;
-    height: 40px;
+    height: 25px;
     background-color: var(--dark-secondary);
     border-radius: 8px 8px 0 0;
     border: 2px solid var(--dark-border);
@@ -73,6 +76,9 @@
     border-radius: 4px;
     height: 100%;
     padding: 5px;
+    padding-top: 10px;
+    position: relative;
+    z-index: 10;
 }
 
 .settings-panel {
